--- a/SpringUser/src/main/resources/templates/login.html
+++ b/SpringUser/src/main/resources/templates/login.html
@@ -1,85 +1,117 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<!-- JavaScript Bundle with Popper -->
+<script
+	src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+	integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+	crossorigin="anonymous"></script>
 
-    <title>Formulario de Registro de Usuario</title>
+<!-- CSS only -->
+<link
+	href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+	rel="stylesheet"
+	integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+	crossorigin="anonymous">
 
-    <link rel="stylesheet" href="css/login.css">
+<title>Formulario de Registro de Usuario</title>
 
+<link rel="stylesheet" href="css/login.css">
 <body>
 
-    <div class="position-relative" style="background-image: url('img/banner_login.png');" id="Image_register">
+	<div class="position-relative"
+		style="background-image: url('img/banner_login.png');"
+		id="Image_register">
 
-        <div class="container">
+		<div class="container">
 
-            <div class="row" id="card_view">
-                <div class="col-sm-12">
-                    <div style="background-color: rgba(0, 0, 0, 0);">
-                        <div class="card-body" >
-                            <div class="row">
-                                <div class="col-sm-5" style="text-align: center; padding: 10vh 0;">
+			<div class="row" id="card_view">
+				<div class="col-sm-12">
+					<div style="background-color: rgba(0, 0, 0, 0);">
+						<div class="card-body">
 
-                                    <h3>BIENVENIDO</h3>
+							<div class="row">
+								<div class="col-sm-5"
+									style="text-align: center; padding: 10vh 0;">
 
-                                    <hr>
+									<h3>BIENVENIDO</h3>
 
-                                    <a href="" style="color: black; text-decoration: none;">¿Olvidaste tu contraseña?</a><br>
-                                    <a href="" style="color: black; text-decoration: none;">¿No tienes cuenta? Registrate</a>
+									<hr>
 
-                                    <hr>
+									<a th:href="@{/registro}" style="color: black; text-decoration: none;">¿Olvidaste
+										tu contraseña?</a><br> <a th:href="@{/registro}"
+										style="color: black; text-decoration: none;">¿No tienes
+										cuenta? Registrate</a>
 
-                                    <a href="" style="color: black; text-decoration: none;">Volver</a>
+									<hr>
 
-                                </div>
-                                <div class="col-sm-2"></div>
-                                <div class="col-sm-5" style="text-align: center; line-height: 10vh;">
+									<a href="" style="color: black; text-decoration: none;">Volver</a>
 
-                                    <h3 class="card-title">User Login</h3>
+								</div>
+								<div class="col-sm-2"></div>
+								<div class="col-sm-5"
+									style="text-align: center; line-height: 10vh;">
 
-                                    <div class="row">
-        
-                                        <div class="col-sm-12">
-        
-                                            <label for="">Email: </label><br>
-                                            <input type="email" class="form-control" id="design_input" aria-describedby="basic-addon1">
-        
-                                        </div>
-        
-                                        <div class="col-sm-12">
-        
-                                            <label for="">Contraseña: </label><br>
-                                            <input type="password" class="form-control" id="design_input" aria-describedby="basic-addon1">
-        
-                                        </div>
-                        
-                                        <div class="col-sm-2"></div>
-                                        <div class="col-sm-8"><a href="#" class="btn btn-secondary" id="design_btn">Iniciar Sesión</a></div>
-                                        <div class="col-sm-2"></div>
-        
-                                    </div>
+									<h3 class="card-title">User Login</h3>
 
-                                </div>
+									<form th:action="@{/login}" method="post">
+									
+										<div th:if=${param.error}>
+											<div class="alert alert-danger">Usuario o contraseña invalidos</div>
+										</div>
+										
+										<div th:if=${param.logout}>
+											<div class="alert alert-info">Ha cerrado sesion exitosamente </div>
+										</div>
 
-                            </div>
-                            
-                            
-                        </div>
-                    </div>
-                </div>
-            </div>
+										<div class="row">
 
-        </div>
+											<div class="col-sm-12">
 
-    </div>
+												<label for="">Email: </label><br> <input type="email"
+													class="form-control" id="design_input"
+													aria-describedby="basic-addon1">
+
+											</div>
+
+											<div class="col-sm-12">
+
+												<label for="">Contraseña: </label><br> <input
+													type="password" class="form-control" id="design_input"
+													aria-describedby="basic-addon1">
+
+											</div>
+
+											<div class="col-sm-2"></div>
+											<div class="col-sm-8">
+												<button type="submit" class="btn btn-secondary" id="design_btn">Iniciar
+													Sesión</button>
+											</div>
+											<div class="col-sm-2"></div>
+
+										</div>
+
+									</form>
+
+
+
+								</div>
+
+							</div>
+
+
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>
+
+	</div>
 
 </body>
 </html>
