Login Register Funcionales

--- a/SpringUser/src/main/resources/templates/login.html
+++ b/SpringUser/src/main/resources/templates/login.html
@@ -72,17 +72,19 @@
 
 											<div class="col-sm-12">
 
-												<label for="">Email: </label><br> <input type="email"
-													class="form-control" id="design_input"
-													aria-describedby="basic-addon1">
+												<label for="username">Email: </label><br> <input type="email"
+													class="form-control" id="design_input" name="username"
+													aria-describedby="basic-addon1"required autofocus="autofocus"
+													placeholder="example@gmail.com">
 
 											</div>
 
 											<div class="col-sm-12">
 
-												<label for="">Contraseña: </label><br> <input
+												<label for="password">Contraseña: </label><br> <input
 													type="password" class="form-control" id="design_input"
-													aria-describedby="basic-addon1">
+													aria-describedby="basic-addon1" name="password"
+													required autofocus="autofocus" >
 
 											</div>
 
