--- a/SpringUser/src/main/resources/templates/Modelo_register.html
+++ b/SpringUser/src/main/resources/templates/Modelo_register.html
@@ -24,7 +24,7 @@
 <body>
 
 	<div class="position-relative"
-		style="background-image: url('img/banner_register.jpg');"
+		style="background-image: url('img/fondo2.jpg');"
 		id="Image_register">
 
 		<div class="container">
@@ -37,7 +37,7 @@
 							a la aplicación</div>
 					</div>
 
-					<div style="background-color: rgba(0, 0, 0, 0);">
+					<div style="background-color: rgba(0, 0, 0, 0); color: white;" class="py-5">
 						<div class="card-body">
 							<h3 class="card-title py-3">Fomulario de Registro</h3>
 							<form th:action="@{/registro}" method="post"
@@ -106,22 +106,22 @@
 
 									<div class="col-sm-3"></div>
 
-									<div class="col-sm-3"></div>
-
 									<div class="col-sm-4"></div>
+
 									<div class="col-sm-4">
 										<button type="submit" class="btn btn-secondary"
 											id="design_btn">Registrar</button>
 									</div>
 									<div class="col-sm-4"></div>
 
-									<div class="col-sm-4"></div>
+									<div class="col-sm-3"></div>
 									<div class="col-sm-4">
 										<span id="design_btn"><a th:href="@{/login}"
-											style="color: black; 	text-decoration: none;">¿Ya tienes
+											style="color: black; text-decoration: none;">¿Ya tienes
 												cuenta? Inicia sesión</a></span>
 									</div>
-									<div class="col-sm-4"></div>
+
+									<div class="col-sm-1"></div>
 
 								</div>
 							</form>
