--- a/SpringUser/src/main/resources/templates/index.html
+++ b/SpringUser/src/main/resources/templates/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<!-- JavaScript Bundle with Popper -->
+<title>Principal Page</title>
 <script
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
 	integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
@@ -14,49 +14,96 @@
 	rel="stylesheet"
 	integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
 	crossorigin="anonymous">
-	
-<link rel="stylesheet" href="css/cover.css">
 
-<title>Index</title>
+<link rel="stylesheet" href="css/index.css">
+
 </head>
-<body class="d-flex h-100 text-center text-bg-dark">
+<body>
 
-	<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-		<header class="mb-auto">
-			<div>
-				<h3 class="float-md-start mb-0">Cover</h3>
-				<nav class="nav nav-masthead justify-content-center float-md-end">
-					<a class="nav-link fw-bold py-1 px-0 active" aria-current="page"
-						href="#">Home</a> <a class="nav-link fw-bold py-1 px-0" href="#">Features</a>
-					<a class="nav-link fw-bold py-1 px-0" href="#">Contact</a>
-				</nav>
+	<div class="position-relative"
+		style="background-image: url('img/mountains.jpg');" id="Image_register">
+
+		<header class="p-3"
+			style="background-color: rgba(0, 0, 0, 0);">
+			<div class="container">
+				<div
+					class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+
+					<ul
+						class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+						<li><a th:href="@{/}"  class="nav-link px-2 text-secondary">Inicio</a></li>
+						<li><a th:href="@{/perfil} + ${#request.userPrincipal.principal.username}"  class="nav-link px-2 text-secondary">Perfil</a></li>
+					</ul>
+
+					<div class="text-end">
+						<button sec:authorize="isAuthenticated()" type="button"
+							class="btn btn-secondary">
+							<a th:href="@{/logout}"
+								style="text-decoration: none; color: white;">Cerrar Sesion</a>
+						</button>
+					</div>
+				</div>
 			</div>
+
 		</header>
 
-		<main class="px-3">
-			<h1>Cover your page.</h1>
-			<p class="lead">Cover is a one-page template for building simple
-				and beautiful home pages. Download, edit the text, and add your own
-				fullscreen background photo to make it your own.</p>
-			<p class="lead">
-				<a href="#"
-					class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn
-					more</a>
-			</p>
-		</main>
+		<div class="px-4 py-5 my-5 text-center">
+			<img class="d-block mx-auto mb-4"
+				src="img/bochi.jpeg" alt="" width="120"
+				height="120" style="border-radius: 100%;">
+			<h1 class="display-5 fw-bold">Alert - B</h1>
+			<div class="col-lg-6 mx-auto">
+				<p class="lead mb-4">Un bot creado principalmente para la detección de bullying en 
+				cualquier persona, con el cual este bot te realizara una encuesta para poder 
+				verificar tu situación. Para poder hacer uso del bot porfavor verifica si existe una especio
+				de circulo que aparece en la parte inferior derecha y presione para que lo redireccione al 
+				bot.</p>
+			</div>
+		</div>
 
-		<footer class="mt-auto text-white-50">
-			<p>
-				Cover template for <a href="https://getbootstrap.com/"
-					class="text-white">Bootstrap</a>, by <a
-					href="https://twitter.com/mdo" class="text-white">@mdo</a>.
-			</p>
-		</footer>
 	</div>
 
-
-
-
+	<!-- Start of Async Callbell Code -->
+	<script>
+		window.callbellSettings = {
+			token : "udsnKen7Ap9S7y8jH4vqG8CL"
+		};
+	</script>
+	<script>
+		(function() {
+			var w = window;
+			var ic = w.callbell;
+			if (typeof ic === "function") {
+				ic('reattach_activator');
+				ic('update', callbellSettings);
+			} else {
+				var d = document;
+				var i = function() {
+					i.c(arguments)
+				};
+				i.q = [];
+				i.c = function(args) {
+					i.q.push(args)
+				};
+				w.Callbell = i;
+				var l = function() {
+					var s = d.createElement('script');
+					s.type = 'text/javascript';
+					s.async = true;
+					s.src = 'https://dash.callbell.eu/include/'
+							+ window.callbellSettings.token + '.js';
+					var x = d.getElementsByTagName('script')[0];
+					x.parentNode.insertBefore(s, x);
+				};
+				if (w.attachEvent) {
+					w.attachEvent('onload', l);
+				} else {
+					w.addEventListener('load', l, false);
+				}
+			}
+		})()
+	</script>
+	<!-- End of Async Callbell Code -->
 
 </body>
 </html>
