--- a/SpringUser/src/main/resources/templates/login.html
+++ b/SpringUser/src/main/resources/templates/login.html
@@ -24,7 +24,7 @@
 <body>
 
 	<div class="position-relative"
-		style="background-image: url('img/banner_login.png');"
+		style="background-image: url('img/fondo.jpg');"
 		id="Image_register">
 
 		<div class="container">
@@ -42,14 +42,11 @@
 
 									<hr>
 
-									<a th:href="@{/registro}" style="color: black; text-decoration: none;">¿Olvidaste
-										tu contraseña?</a><br> <a th:href="@{/registro}"
+									<a th:href="@{/registro}"
 										style="color: black; text-decoration: none;">¿No tienes
 										cuenta? Registrate</a>
 
 									<hr>
-
-									<a href="" style="color: black; text-decoration: none;">Volver</a>
 
 								</div>
 								<div class="col-sm-2"></div>
@@ -59,23 +56,30 @@
 									<h3 class="card-title">User Login</h3>
 
 									<form th:action="@{/login}" method="post">
-									
-										<div th:if=${param.error}>
-											<div class="alert alert-danger">Usuario o contraseña invalidos</div>
+
+										<div class="alert alert-warning alert-dismissible fade show"
+											role="alert" th:if=${param.error} style="line-height: 200%; margin-top: 18px;">
+											Usuario o contraseña invalidos.
+											<button type="button" class="btn-close"
+												data-bs-dismiss="alert" aria-label="Close"></button>
 										</div>
 										
-										<div th:if=${param.logout}>
-											<div class="alert alert-info">Ha cerrado sesion exitosamente </div>
+										<div class="alert alert-info alert-dismissible fade show"
+											role="alert" th:if=${param.logout} style="line-height: 200%; margin-top: 18px;">
+											Ha cerrado sesion
+												exitosamente
+											<button type="button" class="btn-close"
+												data-bs-dismiss="alert" aria-label="Close"></button>
 										</div>
 
 										<div class="row">
 
 											<div class="col-sm-12">
 
-												<label for="username">Email: </label><br> <input type="email"
-													class="form-control" id="design_input" name="username"
-													aria-describedby="basic-addon1"required autofocus="autofocus"
-													placeholder="example@gmail.com">
+												<label for="username">Email: </label><br> <input
+													type="email" class="form-control" id="design_input"
+													name="username" aria-describedby="basic-addon1" required
+													autofocus="autofocus" placeholder="example@gmail.com">
 
 											</div>
 
@@ -83,15 +87,15 @@
 
 												<label for="password">Contraseña: </label><br> <input
 													type="password" class="form-control" id="design_input"
-													aria-describedby="basic-addon1" name="password"
-													required autofocus="autofocus" >
+													aria-describedby="basic-addon1" name="password" required
+													autofocus="autofocus">
 
 											</div>
 
 											<div class="col-sm-2"></div>
 											<div class="col-sm-8">
-												<button type="submit" class="btn btn-secondary" id="design_btn">Iniciar
-													Sesión</button>
+												<button type="submit" class="btn btn-secondary"
+													id="design_btn">Iniciar Sesión</button>
 											</div>
 											<div class="col-sm-2"></div>
 
